fix: add auto schedule